Updated favicon, description meta tag, and intro

--- a/src/layouts/Sidebar.astro
+++ b/src/layouts/Sidebar.astro
@@ -27,28 +27,17 @@ const dateFormat = date.toDateString();
   </span>
   <div class="about-container">
     <span class="about-blurb">
-      I like to design and program. Currently studying Computer Science at Tufts.
+      Working at <a href="https://typo.by" target="_blank">Typo*</a> and studying Computer Science at Tufts.       
+      Find me on <a href="https://are.na/yihui-h" target="_blank">Are.na</a>, 
+      <a href="https://github.com/yihui-hu" target="_blank">GitHub</a>,
+      <a href="https://twitter.com/_yihui" target="_blank">Twitter</a>,
+      <a href="https://read.cv/yihui" target="_blank">Read.cv</a>, and
+      <a href="/links"> more →</a>
       {/* Sometimes I <a
         href="/notes"
         class="wavy-link">write</a
       >. */}
     </span>
-    <div class="about-links">
-      I'm also on:
-      <ul class="list">
-        <li><a href="https://are.na/yihui-h" target="_blank">Are.na</a></li>
-        <li>
-          <a href="https://github.com/yihui-hu" target="_blank">GitHub</a>
-        </li>
-        <li>
-          <a href="https://twitter.com/_yihui" target="_blank">Twitter</a>
-        </li>
-        <li><a href="https://read.cv/yihui" target="_blank">Read.cv</a></li>
-        <li>
-          <a href="/links"> More →</a>
-        </li>
-      </ul>
-    </div>
   </div>
   <WorkList client:load />
   <ListeningTo client:load />
