--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import { ViewTransitions } from 'astro:transitions';
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <meta name="description" content="Yihui Hu personal site">
+    <meta name="description" content="Personal site of Yihui Hu.">
     <title>Yihui Hu</title>
     <ViewTransitions />
   </head>
