Changed favicon to banana

--- a/src/layouts/Note.astro
+++ b/src/layouts/Note.astro
@@ -15,7 +15,7 @@ const { frontmatter } = Astro.props;
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/banana_favicon.png" />
     <meta name="description" content={frontmatter.description} />
     <title>{frontmatter.title}</title>
     <ViewTransitions />
