--- a/src/layouts/Article.astro
+++ b/src/layouts/Article.astro
@@ -18,7 +18,7 @@ const { frontmatter } = Astro.props;
     />
     <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/banana_favicon.png" />
     <meta name="description" content={frontmatter.description} />
     <title>{frontmatter.title}</title>
     <ViewTransitions />
