--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -9,7 +9,7 @@ import { ViewTransitions } from 'astro:transitions';
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/banana_favicon.png" />
     <meta name="description" content="Links to corners of the web" />
     <title>Links</title>
     <ViewTransitions />
