--- a/src/pages/notes.astro
+++ b/src/pages/notes.astro
@@ -7,7 +7,7 @@ import { ViewTransitions } from 'astro:transitions';
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/banana_favicon.png" />
     <meta name="viewport" content="width=device-width" />
     <meta name="description" content="Links to corners of the web" />
     <title>Notes</title>
