Updated for summer 2024
it's been a minute

--- a/src/components/Currently.astro
+++ b/src/components/Currently.astro
@@ -5,12 +5,9 @@ import "../styles/currently.scss";
 <div>
   <span>I'm currently:</span>
   <div id="currently-container">
-    <img id="currently-image" src="/assets/teh-tarik.png" />
-    <!-- <video id="currently-image" autoplay loop muted playsinline>
-      <source src="/assets/fireworks.mov" type="video/mp4" />
-    </video> -->
+    <img id="currently-image" src="/assets/summer.jpg" />
     <div id="currently-info">
-      <span>Eating lots in winter</span>
+      <span>Waiting for summer ☀️⛱️</span>
     </div>
   </div>
 </div>
