Don't apply `.md` image/video styles to sidebar

--- a/src/components/Currently.astro
+++ b/src/components/Currently.astro
@@ -5,7 +5,11 @@ import "../styles/currently.scss";
 <div>
   <span>I'm currently:</span>
   <div id="currently-container">
-    <img id="currently-image" src="https://yihui-work.s3.us-east-2.amazonaws.com/summer.jpg" />
+    <img 
+      id="currently-image" 
+      src="https://yihui-work.s3.us-east-2.amazonaws.com/summer.jpg" 
+      class="sidebar_asset"
+    />
     <div id="currently-info">
       <span>Waiting for summer ☀️⛱️</span>
     </div>
