Updated currently section

--- a/src/components/Currently.astro
+++ b/src/components/Currently.astro
@@ -7,11 +7,11 @@ import "../styles/currently.scss";
   <div id="currently-container">
     <img 
       id="currently-image" 
-      src="https://yihui-work.s3.us-east-2.amazonaws.com/summer.jpg" 
+      src="https://yihui-work.s3.us-east-2.amazonaws.com/apple_park.jpg" 
       class="sidebar_asset"
     />
     <div id="currently-info">
-      <span>Waiting for summer ☀️⛱️</span>
+      <span>Navigating 🍎</span>
     </div>
   </div>
 </div>
